<resources>
    <string name="app_name">QMobilityBusiness</string>
    <string name="business_offical_email">Business offical Email</string>
    <string name="qmobility">QMobility</string>
    <string name="business_name">Business Name</string>
    <string name="business_phone_number">Business Phone Number</string>
    <string name="business_email">Business Email</string>
    <string name="business_address">Business Address</string>
    <string name="business_type">Business Type</string>
    <string name="location_manager_name">Location Manager Name</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="get_location_using_gps">Get Location Using GPS</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="click_to_register_your_business">Click to Register your Business</string>
    <string name="login">login</string>
    <string name="forgot_your_password">forgot_your_password</string>
    <string name="email_address">email_address</string>
    <string name="passwordicon">passwordIcon</string>
    <string name="emailicon">emailIcon</string>
    <string name="smart_queue_system">smart_queue_system</string>
    <string name="add_employee">Add Employee</string>
    <string name="read_employees_data">Read Employees Data</string>
    <string name="update_employee_data">Update Employee Data</string>
    <string name="delete_employee">Delete Employee</string>
    <string name="employee_email">Employee email</string>
    <string name="accesstype">AccessType</string>
    <string name="phonenumber">PhoneNumber</string>
    <string name="employee_name">Employee name</string>
    <string name="employee_id">Employee ID</string>
    <string name="business_id">Business ID</string>
</resources>