<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".RegisterBusinessActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="1000dp">

        <TextView
            android:id="@+id/headerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/qmobility"
            android:textColor="#FF6E40"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/businessPhoneNumberEditText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="25dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_corners"
            android:ems="10"
            android:hint="@string/business_phone_number"
            android:inputType="number|phone"
            android:paddingStart="40dp"
            android:paddingEnd="1dp"
            android:textColor="@color/black"
            android:textColorHint="#F44336"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/businessNameEditText"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/smallHeaderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="smart_queue_system"
            android:textColor="#FF6E40"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@+id/headerTextView"
            app:layout_constraintStart_toStartOf="@+id/headerTextView"
            app:layout_constraintTop_toBottomOf="@+id/headerTextView" />

        <EditText
            android:id="@+id/businessNameEditText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="25dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_corners"
            android:ems="10"
            android:hint="@string/business_name"
            android:inputType="textPassword"
            android:paddingStart="40dp"
            android:paddingEnd="1dp"
            android:textColor="@color/black"
            android:textColorHint="#F44336"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/smallHeaderTextView"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/businessEmailEditText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="25dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_corners"
            android:ems="10"
            android:hint="@string/business_email"
            android:inputType="textEmailAddress"
            android:paddingStart="40dp"
            android:paddingEnd="1dp"
            android:textColor="@color/black"
            android:textColorHint="#F44336"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/businessPhoneNumberEditText"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/businessLatitudeEditText"
            android:layout_width="145dp"
            android:layout_height="48dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_corners"
            android:ems="10"
            android:hint="@string/latitude"
            android:inputType="text|numberDecimal"
            android:paddingStart="20dp"
            android:paddingEnd="1dp"
            android:textColor="@color/black"
            android:textColorHint="#F44336"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/GetGpsBusinessAddressCheckBox"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/businessLongitudeEditText"
            android:layout_width="152dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_corners"
            android:ems="10"
            android:hint="@string/longitude"
            android:inputType="text|numberDecimal"
            android:paddingStart="20dp"
            android:paddingEnd="1dp"
            android:textColor="@color/black"
            android:textColorHint="#F44336"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/GetGpsBusinessAddressCheckBox"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/businessAddressEditText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="25dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_corners"
            android:ems="10"
            android:hint="@string/business_address"
            android:inputType="text|textPostalAddress"
            android:paddingStart="40dp"
            android:paddingEnd="1dp"
            android:textColor="@color/black"
            android:textColorHint="#F44336"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/businessEmailEditText"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/businessTypeEditText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="25dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_corners"
            android:ems="10"
            android:hint="@string/business_type"
            android:inputType="text"
            android:paddingStart="20dp"
            android:paddingEnd="1dp"
            android:textColor="@color/black"
            android:textColorHint="#F44336"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/businessLatitudeEditText"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/locationManagerNameEditText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="25dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_corners"
            android:ems="10"
            android:hint="@string/location_manager_name"
            android:inputType="text"
            android:paddingStart="20dp"
            android:paddingEnd="1dp"
            android:textColor="@color/black"
            android:textColorHint="#F44336"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/businessTypeEditText"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="25dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_corners"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="1dp"
            android:textColor="@color/black"
            android:textColorHint="#F44336"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationManagerNameEditText"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/registerbusinessButton"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/edit_text_corners"
            android:onClick="registerBusinessButtonClicked"
            android:text="@string/register"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

        <CheckBox
            android:id="@+id/GetGpsBusinessAddressCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/get_location_using_gps"
            android:textColor="@color/white"
            android:textColorHint="#F44336"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/businessAddressEditText" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>