<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".adminactivities.ManageEmployeesActivity">

    <TextView
        android:id="@+id/businessNameManageEmployeesHeaderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="QMobility"
        android:textColor="#FF6E40"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/smallHeaderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smart_queue_system"
        android:textColor="#FF6E40"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/businessNameManageEmployeesHeaderTextView"
        app:layout_constraintStart_toStartOf="@+id/businessNameManageEmployeesHeaderTextView"
        app:layout_constraintTop_toBottomOf="@+id/businessNameManageEmployeesHeaderTextView" />

    <Button
        android:id="@+id/addEmployeeButton"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/edit_text_corners"
        android:onClick="addEmployeeButtonClicked"
        android:text="@string/add_employee"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/smallHeaderTextView" />

    <Button
        android:id="@+id/readEmployeesDataButton"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/edit_text_corners"
        android:onClick="readEmployeesDataButtonClicked"
        android:text="@string/read_employees_data"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addEmployeeButton" />

    <Button
        android:id="@+id/updateEmployeeData"
        android:layout_width="0dp"
        android:layout_height="63dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/edit_text_corners"
        android:onClick="updateEmployeeDataButtonClicked"
        android:text="@string/update_employee_data"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/readEmployeesDataButton" />

    <Button
        android:id="@+id/deleteEmployeeButton"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/edit_text_corners"
        android:onClick="deleteEmployeeButtonClicked"
        android:text="@string/delete_employee"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateEmployeeData" />


</androidx.constraintlayout.widget.ConstraintLayout>