<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".adminactivities.AddEmployeeActivity">

    <TextView
        android:id="@+id/headerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/qmobility"
        android:textColor="#FF6E40"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/smallHeaderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="smart_queue_system"
        android:textColor="#FF6E40"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/headerTextView"
        app:layout_constraintStart_toStartOf="@+id/headerTextView"
        app:layout_constraintTop_toBottomOf="@+id/headerTextView" />


    <EditText
        android:id="@+id/employeeEmailEditText"
        android:layout_width="361dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_corners"
        android:ems="10"
        android:hint="@string/employee_email"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingEnd="1dp"
        android:textColor="#FF6E40"
        android:textColorHint="#F44336"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employeeNameEditText"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/employeeNameEditText"
        android:layout_width="361dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_corners"
        android:ems="10"
        android:hint="@string/employee_name"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingEnd="1dp"
        android:textColor="#FF6E40"
        android:textColorHint="#F44336"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employeeIdEditText"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/employeeIdEditText"
        android:layout_width="361dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_corners"
        android:ems="10"
        android:enabled="false"
        android:hint="Automatically generated"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingEnd="1dp"
        android:textColor="#FF6E40"
        android:textColorHint="#F44336"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employeeBusinessIdEditText"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/employeeAccessTypeEditText"
        android:layout_width="361dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_corners"
        android:ems="10"
        android:hint="@string/accesstype"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingEnd="1dp"
        android:textColor="#FF6E40"
        android:textColorHint="#F44336"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employeePhonenumberEditText"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/employeeBusinessIdEditText"
        android:layout_width="361dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_corners"
        android:ems="10"
        android:hint="@string/business_id"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingEnd="1dp"
        android:textColor="#FF6E40"
        android:textColorHint="#F44336"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/smallHeaderTextView"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/employeePhonenumberEditText"
        android:layout_width="361dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_corners"
        android:ems="10"
        android:hint="@string/phonenumber"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingEnd="1dp"
        android:textColorHint="#F44336"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employeePasswordEditText"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/employeePasswordEditText"
        android:layout_width="361dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_corners"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="1dp"
        android:textColor="#FF6E40"
        android:textColorHint="#F44336"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employeeEmailEditText"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/registerEmployeeButton"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edit_text_corners"
        android:onClick="registerEmployeeButtonClicked"
        android:text="@string/register"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employeeAccessTypeEditText" />


</androidx.constraintlayout.widget.ConstraintLayout>